force-app/main/default/objects/Information_Request__c/Information_Request__c.object-meta.xml
<CustomObject>
    <label>Information Request</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Information Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Information Requests</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>