force-app/main/default/objects/Information_Request__c/fields/Andersen_Availability__c.field-meta.xml
<CustomField>
    <fullName>Andersen_Availability__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Andersen Availability</label>
    <length>255</length>
    <type>Text</type>
</CustomField>