force-app/main/default/objects/Information_Request__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <label>Assigned To</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mobile Employee</fullName>
                <default>true</default>
                <label>Mobile Employee</label>
            </value>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Andersen Office</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>