force-app/main/default/objects/Information_Request__c/fields/Client_Contact__c.field-meta.xml
<CustomField>
    <fullName>Client_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Contact at Client that will be assigned the Information Request</inlineHelpText>
    <label>Client Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Information Requests</relationshipLabel>
    <relationshipName>Information_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>