force-app/main/default/objects/Information_Request__c/fields/Engagement__c.field-meta.xml
<CustomField>
    <fullName>Engagement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Engagement</label>
    <referenceTo>Engagement__c</referenceTo>
    <relationshipLabel>Information Requests</relationshipLabel>
    <relationshipName>Information_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>