force-app/main/default/objects/Information_Request__c/fields/File_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>File_Reviewed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>JIRA:AGMPB-316</description>
    <label>File Reviewed</label>
    <type>Checkbox</type>
</CustomField>