force-app/main/default/objects/Information_Request__c/fields/First_Available_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>First_Available_Date_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>First Available Date Time</label>
    <type>DateTime</type>
</CustomField>