force-app/main/default/objects/Information_Request__c/fields/Information_Request_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>Information_Request_Name_Formula__c</fullName>
    <formula>CASE
(Type__c,
&quot;Document&quot;,&quot;Review Document&quot;,
&quot;Information&quot;,&quot;Provide Information&quot;,
&quot;Review Tax Return&quot;,&quot;Review Tax Return&quot;,	
&quot;Review File&quot;, &quot;Review File&quot;,
&quot;Upload File&quot;, &quot;Upload File&quot;,
&quot;Schedule Consultation&quot;, &quot;Schedule Consultation&quot;,
&quot;Availability&quot;, &quot;Provide Availability&quot;,
&quot;Review Out of Scope Authorization&quot;, &quot;Review Out of Scope Authorization&quot;,
&quot;Review Out of Scope Question Response&quot;, &quot;Review Out of Scope Question Response&quot;,
&quot;Questionnaire&quot;, &quot;Complete Questionnaire&quot;,	
&quot;Review Equalization&quot;, &quot;Review Equalization&quot;,
&quot;Equalization Payment&quot;, &quot;Equalization Payment&quot;,
&quot;Tax Payment&quot;, &quot;Tax Payment&quot;,
&quot;Please Review&quot;				
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Information Request Name Formula</label>
    <type>Text</type>
</CustomField>