force-app/main/default/objects/Information_Request__c/fields/Relating_to__c.field-meta.xml
<CustomField>
    <fullName>Relating_to__c</fullName>
    <description>JIRA:AGMPB-250</description>
    <label>Relating to</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Request regarding a service</fullName>
            </value>
            <value>
                <fullName>Tech Support</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>