force-app/main/default/objects/Information_Request__c/fields/Second_Available_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Second_Available_Date_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Second Available Date Time</label>
    <type>DateTime</type>
</CustomField>