force-app/main/default/objects/Information_Request__c/fields/Third_Available_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Third_Available_Date_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Third Available Date Time</label>
    <type>DateTime</type>
</CustomField>