force-app/main/default/objects/Information_Request__c/fields/Third_TimeZone__c.field-meta.xml
<CustomField>
    <fullName>Third_TimeZone__c</fullName>
    <description>JIRA:AGMPB-438</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Third TimeZone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>