force-app/main/default/objects/Information_Request__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Assigned_To__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Document</fullName>
            </value>
            <value>
                <fullName>Information</fullName>
            </value>
            <value>
                <fullName>Review Tax Return</fullName>
            </value>
            <value>
                <fullName>Review File</fullName>
            </value>
            <value>
                <fullName>Upload File</fullName>
            </value>
            <value>
                <fullName>Schedule Consultation</fullName>
            </value>
            <value>
                <fullName>Review Out of Scope Authorization</fullName>
            </value>
            <value>
                <fullName>Review Out of Scope Question Response</fullName>
            </value>
            <value>
                <fullName>Questionnaire</fullName>
            </value>
            <value>
                <fullName>Review Equalization</fullName>
            </value>
            <value>
                <fullName>Equalization Payment</fullName>
            </value>
            <value>
                <fullName>Tax Payment</fullName>
            </value>
            <value>
                <fullName>Availability</fullName>
                <isActive>false</isActive>
                <label>Availability</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>