force-app/main/default/objects/Information_Request__c/fields/Work_Authorization__c.field-meta.xml
<CustomField>
    <fullName>Work_Authorization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Authorization</label>
    <referenceTo>Work_Authorization__c</referenceTo>
    <relationshipLabel>Information Requests</relationshipLabel>
    <relationshipName>Information_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>