force-app/main/default/objects/Information_Request__c/fields/Work_Record_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>Work_Record_Name_Formula__c</fullName>
    <formula>Work_Record__r.Name</formula>
    <label>Work Record</label>
    <type>Text</type>
</CustomField>