force-app/main/default/objects/Information_Request__c/validationRules/InformationRequest_VR02_NoClientContact.validationRule-meta.xml
<ValidationRule>
    <fullName>InformationRequest_VR02_NoClientContact</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISBLANK(Client_Contact__c)) &amp;&amp;  TEXT(Assigned_To__c)&lt;&gt;&quot;Client&quot;</errorConditionFormula>
    <errorDisplayField>Client_Contact__c</errorDisplayField>
    <errorMessage>InformationRequest_VR02: Client Contact is not needed for this request</errorMessage>
</ValidationRule>