force-app/main/default/objects/Information_Request__c/validationRules/InformationRequest_VR03_DescRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>InformationRequest_VR03_DescRequired</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Type__c, &quot;Information&quot;) &amp;&amp; ISBLANK(Description__c)</errorConditionFormula>
    <errorDisplayField>Description__c</errorDisplayField>
    <errorMessage>InformationRequest_VR03: Please provide a description of the information request</errorMessage>
</ValidationRule>