force-app/main/default/objects/Information_Request__c/validationRules/InformationRequest_VR04_WorkAuthValid.validationRule-meta.xml
<ValidationRule>
    <fullName>InformationRequest_VR04_WorkAuthValid</fullName>
    <active>true</active>
    <description>Jira:AGMPB-304</description>
    <errorConditionFormula>AND(
    ISPICKVAL( Type__c , &quot;Review Out of Scope Authorization&quot;),
    ISBLANK(Work_Authorization__c)
)</errorConditionFormula>
    <errorMessage>InformationRequest_VR04: Please Fill the work Authorization Lookup</errorMessage>
</ValidationRule>