force-app/main/default/objects/Information_Request__c/listViews/Action_Items.listView-meta.xml
<ListView>
    <fullName>Action_Items</fullName>
    <columns>NAME</columns>
    <columns>Work_Record_Name_Formula__c</columns>
    <columns>Due_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Action Required</value>
    </filters>
    <filters>
        <field>Assigned_To__c</field>
        <operation>equals</operation>
        <value>Client</value>
    </filters>
    <label>Action Items</label>
</ListView>