force-app/main/default/objects/Information_Request__c/listViews/Client_Review.listView-meta.xml
<ListView>
    <fullName>Client_Review</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Action Required</value>
    </filters>
    <filters>
        <field>Assigned_To__c</field>
        <operation>equals</operation>
        <value>Client</value>
    </filters>
    <filters>
        <field>Client_Contact__c</field>
        <operation>equals</operation>
        <value>$User</value>
    </filters>
    <label>Client Review</label>
</ListView>