force-app/main/default/objects/Information_Request__c/listViews/File_Upload_Requests.listView-meta.xml
<ListView>
    <fullName>File_Upload_Requests</fullName>
    <columns>NAME</columns>
    <columns>Due_Date__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Upload File</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Action Required</value>
    </filters>
    <label>File Upload Requests</label>
</ListView>