force-app/main/default/objects/Information_Request__c/listViews/To_Dos.listView-meta.xml
<ListView>
    <fullName>To_Dos</fullName>
    <columns>NAME</columns>
    <columns>Work_Record_Name_Formula__c</columns>
    <columns>Due_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Action Required</value>
    </filters>
    <filters>
        <field>Assigned_To__c</field>
        <operation>equals</operation>
        <value>Mobile Employee</value>
    </filters>
    <label>Tasks:</label>
</ListView>